--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <div id="nav">
                 <h3>Navigation</h3>
                 <ul>
-                    <li><a href="index2.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a class="selected" href="">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -33,13 +33,14 @@
                         <li>Alpha Epsilon Phi</li>
                         <li>NU Mutual Aid</li>
                         <li>COSMO</li>
+                        <li>Oasis</li>
                     </ul>
                     <br> 
                     Outside of class, I enjoy: 
                     <ul> 
-                        <li>running</li>
+                        <li>distance running</li>
                         <li>photography</li>
-                        <li>cooking</li>
+                        <li>cooking Asian cuising</li>
                         <li>exploring Boston</li>
                         <li>playing soccer</li>
                     </ul>
