--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <div id="nav">
                 <h3>Navigation</h3>
                 <ul>
-                    <li><a href="index2.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a class="selected" href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
