--- a/portfolio.html
+++ b/portfolio.html
@@ -26,30 +26,65 @@
             </div>
             <div id="main">
                 <h2>Portfolio Page</h2>
-                <p>Below are a few recent personal projects I have completed.  
+                <p>Below are a few of my recent personal and class projects.  
                     <br> <br>
                     <a href="https://github.com/abbyhofmann">Github</a>
-                    <br> <br>
+                    <br> <br> 
+                    Berkeley CS188 Pacman Projects - Python 
+                    <ul> 
+                        <li>Completed three UC Berkeley programming assignments covering search, adversarial search, and reinforcement learning.</li>
+                        <li>Implemented a series of algorithms and heuristics, including BFS, DFS, UCS, A*, Minimax, Alpha-Beta Pruning, Expectimax, and more.</li>
+                    </ul>
+                    <br>
+                    Roommate Database Application - Python, MySQL, Flask 
+                    <ul> 
+                        <li>Developed a profile web application for Northeastern students to register, create and edit a profile, and view
+                            others’ profiles to find roommates.</li>
+                        <li>MySQL database stores user account details and connects to the Python-based Flask application.</li>
+                    </ul> 
+                    <br>
                     Hangman Game - Java  
                     <ul> 
-                        <li> </li>
+                        <li>Built a two-person hangman game in Java using the MVC design pattern to apply object-oriented program-
+                            ming concepts.</li>
+                        <li>Implemented a GUI that makes use of the command design pattern to display the hangman.</li>
                     </ul>
                     <br> 
                     Personal Website - HTML, CSS 
                     <ul> 
-                        <li> </li>
+                        <li>Created and designed a personal website to highlight and consolidate various academic and personal projects.</li>
+                        <li>Pursued as an endeavor to self-teach HTML and CSS while exploring web-dev.</li>
                     </ul>
                     <br> 
                     Marble Solitaire - Java 
                     <ul> 
-                        <li> </li>
+                        <li>Built a marble solitaire Java game using the Model, View, Controller design pattern with abstractions throughout.</li>
+                        <li>There are three different game implementations: traditional, European, and triangle.</li>
                     </ul>
                     <br> 
                     Image Processing Application - Java 
                     <ul> 
-                        <li> </li>
+                        <li>Constructed and designed an image processing application with a Graphical User Interface using Java and Java Swing.</li>
+                        <li>Applied the MVC and Command design patterns.</li>
+                        <li>The user can upload a JPG, PPM, PNG, or BMP file, then apply a variety of image processing commands onto the image, including 
+                            brighten/darken, greyscale, horizontal/vertical flip, filter, blur, and sharpen. The user can then save the file to a location of their 
+                            choosing as one of the aforementioned file types. 
+                        </li>
                     </ul>
                     <br> 
+                    BFS/DFS Maze Solver - Java 
+                    <ul> 
+                        <li>Implemented Breadth-First and Depth-First Search algorithms to solve a maze in Java.</li>
+                    </ul>
+                    <br> 
+                    FloodIt Game - Java 
+                    <ul> 
+                        <li>Recreated the game FloodIt in Java, where the user must flood a board of randomly colored squares to be completely 
+                            one color by clicking on adjacent squares. 
+                        </li>
+                    </ul>
+                    <br>
+
                 </p>
                 <br>
             </div>
